plugins/mermaid/testData/intention/gitgraph/merge_itself.mermaid
gitGraph
  commit
  branch testBranch
  merge <error descr="Cannot merge a branch to itself">testBranch</error>
